test_manifests/test/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/jenkins: "true"
        io.kompose.service: jenkins
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Duser.timezone=Europe/Kiev
            - name: JENKINS_HOME
              value: /var/lib/jenkins
          image: jenkins/jenkins:2.249.3
          name: jenkins
          ports:
            - containerPort: 8080
            - containerPort: 50000
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/jenkins
              name: jenkins-claim0
            - mountPath: /var/run/docker.sock
              name: jenkins-claim1
            - mountPath: /usr/bin/docker
              name: jenkins-claim2
            - mountPath: /usr/lib/x86_64-linux-gnu/libltdl.so.7
              name: jenkins-claim3
      restartPolicy: Always
      volumes:
        - name: jenkins-claim0
          persistentVolumeClaim:
            claimName: jenkins-claim0
        - name: jenkins-claim1
          persistentVolumeClaim:
            claimName: jenkins-claim1
        - name: jenkins-claim2
          persistentVolumeClaim:
            claimName: jenkins-claim2
        - name: jenkins-claim3
          persistentVolumeClaim:
            claimName: jenkins-claim3
status: {}
