test_manifests/test/jenkins-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jenkins
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jenkins: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jenkins: "true"
