test_manifests/test/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "50000"
      port: 50000
      targetPort: 50000
  selector:
    io.kompose.service: jenkins
status:
  loadBalancer: {}
